--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-
-
+<div class="d-flex flex-wrap">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light col-12">
+        <div class="container-fluid">
+          <a class="navbar-brand" routerLink="/dashboard">Delivery management project</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item ">
+                    <a href="" class="nav-link btn bg-danger text-white me-2 p-1">Deconection</a>  
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/projets" class="nav-link btn border border-1 border-primary text-primary me-2 p-1">Connection</a>
+                </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+</div>
 <router-outlet></router-outlet>
