--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
                     <a href="" class="nav-link btn bg-danger text-white me-2 p-1">Deconection</a>  
                 </li>
                 <li class="nav-item">
-                    <a routerLink="/projets" class="nav-link btn border border-1 border-primary text-primary me-2 p-1">Connection</a>
+                    <a routerLink="/projects" class="nav-link btn border border-1 border-primary text-primary me-2 p-1">Connection</a>
                 </li>
             </ul>
           </div>
