--- a/src/app/components/projects-list/projects-list.component.html
+++ b/src/app/components/projects-list/projects-list.component.html
@@ -1,1 +1,11 @@
 <p>projects-list works!</p>
+
+<div class="container-fluid d-flex col-12 flex-wrap justify-content-center">
+    <div *ngFor="let project of allProjects" class="card col-3 p-2 m-2">
+        <h3 class="text-center text-uppercase fs-4" >{{project.name}}</h3>
+        <p><small>identifiant : {{project.id}}</small></p>
+        <p>{{project.describ}}</p>
+        <a routerLink="/project/{{project.id}}" class="btn btn-primary col-6 m-auto">Voir ce projet</a>
+    </div>
+</div>
+
