--- a/src/app/components/project-single/project-single.component.html
+++ b/src/app/components/project-single/project-single.component.html
@@ -6,13 +6,14 @@
         <H2 > {{project.name}}</H2>
         <p> Description : {{project.describ}}</p> 
     </div>
-    <div *ngFor="let functionality of project.functionalities">
-        <div class="card">
-            <h3>{{functionality.name}}</h3>
-            <p><small>identifiant : {{functionality.id}}</small></p>
-            <p>version : {{functionality.version}}</p>
-            <p>description : {{functionality.describ}}</p>
-            <a routerLink="/functionality/{{functionality.id}}" class="btn btn-primary col-6 m-auto">Voir cette functionalitée</a>
-        </div>
+</div>
+<div *ngIf="project" class="container-fluid d-flex col-12 flex-wrap justify-content-center">
+    <div *ngFor="let functionality of project.functionalities" class="card col-3 p-2 m-2">    
+        <h3>{{functionality.name}}</h3>
+        <p><small>identifiant : {{functionality.id}}</small></p>
+        <p>version : {{functionality.version}}</p>
+        <p>description : {{functionality.describ}} du Projet : {{project.name}}</p>
+        <a routerLink="../../project/{{project.id}}/functionality/{{functionality.id}}" class="btn btn-primary col-6 m-auto">Voir cette functionalitée</a>     
     </div>
 </div>
+
