--- a/src/app/components/functionality-single/functionality-single.component.html
+++ b/src/app/components/functionality-single/functionality-single.component.html
@@ -9,10 +9,11 @@
             <h3 class="text-center m-2"> {{functionality.name}}</h3>
             <div class="container-fluid d-flex col-12 flex-wrap justify-content-center">
                 <div *ngFor="let component of functionality.components" class="card col-3 p-2 m-2">                                
-                    <p>{{component.name}}</p>
+                    <h4 class="text-center m-2">{{component.name}}</h4>
                     <p><small>identifiant : {{component.id}}</small></p>
                     <p>version : {{component.version}}</p>
                     <p>description : {{component.describ}}</p>
+                    <a routerLink="../../../../project/{{project.id}}/functionality/{{functionality.id}}/component/{{component.id}}" class="btn btn-primary col-6 m-auto">Voir ce composant</a>  
                 </div>
             </div>
         </div>
