--- a/src/app/components/functionality-single/functionality-single.component.html
+++ b/src/app/components/functionality-single/functionality-single.component.html
@@ -1,6 +1,7 @@
-<p>functionality-single works!</p>
+<a class="btn btn-primary m-2" routerLink="/projects">projets</a>
+<a class="btn btn-danger m-2" routerLink="../..">Back</a>
 <div *ngIf="project">
-    <div class="text-center  bg-secondary p-3 text-white">
+    <div class="text-center  p-3text-white projectName">
         <H2 > {{project.name}}</H2>
         <p> Description : {{project.describ}}</p> 
     </div>
