--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-wrap">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light col-12">
+    <nav class="navbar navbar-expand-lg  col-12">
         <div class="container-fluid">
           <a class="navbar-brand" routerLink="/dashboard">Delivery management project</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
