--- a/src/app/components/project-single/project-single.component.html
+++ b/src/app/components/project-single/project-single.component.html
@@ -1,8 +1,9 @@
-<p>project-single works!</p>
-<a routerLink="/projects">back</a>
+
+<a class="btn btn-primary m-2" routerLink="/projects">back</a>
+
 
 <div *ngIf="project">
-    <div class="text-center  bg-secondary p-3 text-white">
+    <div class="text-center  p-3  projectName">
         <H2 > {{project.name}}</H2>
         <p> Description : {{project.describ}}</p> 
     </div>
