--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar {
+    background-color: #121b50;
+    a{
+        text-decoration: none;
+        color: white;
+    }
+    
+}
+.projectName{
+    background-color: #d9d9d9;
+    color: white;
+    min-height: 35vh;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    h2{
+        color: #af2547;
+        text-transform: uppercase;
+        width: 100%;
+    }
+    p{
+        background-color: white;
+        color: black;
+        width: max-content;
+        margin: auto;
+        padding: 0.3rem;
+        border: 1px solid black;
+        font-size: 16px;
+    }
+
+}
+
+.card a{
+    transition: 0.3s;
+   &:hover{
+    transform: scale(1.1);
+} 
+}
