--- a/src/app/components/functionality-single/functionality-single.component.html
+++ b/src/app/components/functionality-single/functionality-single.component.html
@@ -3,20 +3,18 @@
 <div *ngIf="project">
     <div class="text-center  p-3text-white projectName">
         <H2 > {{project.name}}</H2>
-        <p> Description : {{project.describ}}</p> 
+        <p> Description : {{project.describe}}</p> 
     </div>
-    <div *ngFor="let functionality of project.functionalities">
-        <div *ngIf="functionalityId === functionality.id">
-            <h3 class="text-center m-2"> {{functionality.name}}</h3>
-            <div class="container-fluid d-flex col-12 flex-wrap justify-content-center">
-                <div *ngFor="let component of functionality.components" class="card col-3 p-2 m-2">                                
-                    <h4 class="text-center m-2">{{component.name}}</h4>
-                    <p><small>identifiant : {{component.id}}</small></p>
-                    <p>version : {{component.version}}</p>
-                    <p>description : {{component.describ}}</p>
-                    <a routerLink="../../../../project/{{project.id}}/functionality/{{functionality.id}}/component/{{component.id}}" class="btn btn-primary col-6 m-auto">Voir ce composant</a>  
-                </div>
-            </div>
+    <div *ngIf="functionality ">
+
+        <h3 class="text-center">functionalalitée : {{functionality.name}}</h3>
+    <div class="d-flex flex-wrap">
+          <div *ngFor="let component of functionality.components" class="card m-2 p-2">
+              <h3> {{ component.name}}</h3>
+              <p>function : {{functionality.name}} , {{project.name}}</p>
         </div>
+    </div>
+      
+
     </div>
 </div>
