--- a/src/app/components/projects-list/projects-list.component.html
+++ b/src/app/components/projects-list/projects-list.component.html
@@ -1,10 +1,16 @@
 
-<div class="container-fluid d-flex col-12 flex-wrap justify-content-center">
-    <div *ngFor="let project of allProjects" class="card col-3 p-2 m-2">
+<h2>Liste des projects</h2>
+
+<div class="container-fluid d-flex col-12 flex-wrap justify-content-center mt-5">
+    <div *ngFor="let project of allProjects" class="card  p-2 m-2">
+        <p>{{project.date | date : 'd MMMM yyyy , h:mm:ss'}}</p>
         <h3 class="text-center text-uppercase fs-4" >{{project.name}}</h3>
-        <p><small>identifiant : {{project.id}}</small></p>
-        <p>{{project.describ}}</p>
+        <p><small>identifiant projet: {{project.id}}</small></p>
+        <p>{{project.describe}}</p>
         <a routerLink="/project/{{project.id}}" class="btn btn-primary col-6 m-auto">Voir ce projet</a>
     </div>
 </div>
+
+
+
 
