--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@
     }
     
 }
+h2 , h3{
+    color: #af2547;
+}
 .projectName{
     background-color: #d9d9d9;
     color: white;
@@ -31,7 +34,11 @@
     }
 
 }
-
+.card {
+    max-width: 600px;
+    min-width: 600px;
+    min-height: 300px;
+}
 .card a{
     transition: 0.3s;
    &:hover{
