--- a/src/app/components/projects-list/projects-list.component.html
+++ b/src/app/components/projects-list/projects-list.component.html
@@ -2,14 +2,16 @@
 <h2>Liste des projects</h2>
 
 <div class="container-fluid d-flex col-12 flex-wrap justify-content-center mt-5">
-    <div *ngFor="let project of allProjects" class="card  p-2 m-2">
+    <div *ngFor="let project of projects" class="card  p-2 m-2">
         <p>{{project.date | date : 'd MMMM yyyy , h:mm:ss'}}</p>
         <h3 class="text-center text-uppercase fs-4" >{{project.name}}</h3>
         <p><small>identifiant projet: {{project.id}}</small></p>
         <p>{{project.describe}}</p>
         <a routerLink="/project/{{project.id}}" class="btn btn-primary col-6 m-auto">Voir ce projet</a>
+        <button type="button" class="btn btn-danger" title="delete project"(click)="deleteProject(project)">suprimer</button>
     </div>
 </div>
+<a routerLink="./addProject" class="btn btn-primary d-flex align-items-center justify-content-center col-6">creer un nouveau projet <span class="fs-1 m-1">+</span></a>
 
 
 
